manifests/redisinsight/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisinsight
  namespace: databases
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redisinsight
  template:
    metadata:
      labels:
        app: redisinsight
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: redisinsight
          image: redis/redisinsight:3.8.0
          ports:
            - containerPort: 5540
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: redisinsight-data
