manifests/redisinsight/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redisinsight
  namespace: databases
spec:
  selector:
    app: redisinsight
  ports:
    - port: 80
      targetPort: 5540
